--- a/djab.proxy/appsettings.json
+++ b/djab.proxy/appsettings.json
@@ -8,9 +8,11 @@
   },
   "AllowedHosts": "*",
   "Yts": {
-    "BaseUrl": "https://yts.unblockit.one/"
+    "BaseUrl": "https://yts.unblockit.one/",
+    "ByPass":  true
   },
   "EzTv": {
-    "BaseUrl": "https://eztv.io/"
+    "BaseUrl": "https://eztv.io/",
+    "ByPass": false
   }
 }
