--- a/djab.proxy/appsettings.json
+++ b/djab.proxy/appsettings.json
@@ -8,8 +8,8 @@
   },
   "AllowedHosts": "*",
   "Yts": {
-    "BaseUrl": "https://yts.unblockit.one/",
-    "ByPass":  true
+    "BaseUrl": "https://yts.mx/",
+    "ByPass": false
   },
   "EzTv": {
     "BaseUrl": "https://eztv.io/",
